# CSmolConf

./: .gitignore  README.md  build.sh  c_smol_conf.h  in.scnf  in2.scfg  in2.scnf  smol_conf.h  test.c
test/: CMakeLists.txt  main.c
